--- a/index.html
+++ b/index.html
@@ -1,3 +1,37 @@
-# animalsinmysoulfrompoland.github.io
-My first page
-https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.polska.travel%2Fpl%2Fglowne-miasta%2Folsztyn&psig=AOvVaw11vWEBkmm7dsuQXYrSYipI&ust=1679478201938000&source=images&cd=vfe&ved=0CBAQjRxqFwoTCKj6x__d7P0CFQAAAAAdAAAAABAD
+wojonicy ognista gwiazda <p style="color:AC3510">ognista gwiazda</p>
+<a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fsamequizy.pl%2Fjak-dobrze-znasz-ognista-gwiazde-z-serii-ksiazek-wojownicy%2F&psig=AOvVaw0phpzZCwK11nIAY26UE_3y&ust=1680087931620000&source=images&cd=vfe&ved=0CA0QjRxqFwoTCODYvMe9_v0CFQAAAAAdAAAAABAD"target="_blank"> kliknij</a> 
+<img src="https://static.wikia.nocookie.net/wojownicy2703/images/e/eb/Ognista_Gwiazda_-_ON.png/revision/latest?cb=20220627184720&path-prefix=pl">
+<hr/>
+<table border"1">
+  <thead>
+    <tr>
+      <th scope="col">Rok</th>
+      <th scope="col">Przychody</th>
+      <th scope="col">Koszty</th>
+      <th scope="col">Zysk</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">2013</th>
+      <td>200'000</td>
+      <td>150'000</td>
+      <td>50'000</td>
+    </tr>
+    <tr>
+      <th scope="row">2014</th>
+      <td>500'000</td>
+      <td>300'000</td>
+      <td>200'000</td>
+    </tr>
+  </tbody>
+  <tfoot>
+    <tr>
+      <th scope="row">Razem</th>
+      <td>700'000</td>
+      <td>450'000</td>
+      <td>250'000</td>
+    </tr>
+  </tfoot>
+</table>
+
