--- a/index.html
+++ b/index.html
@@ -34,4 +34,11 @@ wojonicy ognista gwiazda <p style="color:AC3510">ognista gwiazda</p>
     </tr>
   </tfoot>
 </table>
-
+<a href="http://how2html.pl">
+  <img src="logo.png" alt="logo how2html">
+</a>
+<ul>
+  <li><a href="#">Strona Główna</a></li>
+  <li><a href="pierwsza ksiazka">Lekcja 1</a></li>
+  <li><a href="druga ksiazka">Lekcja 2</a></li>
+</ul>
