--- a/index.html
+++ b/index.html
@@ -44,3 +44,11 @@ wojonicy ognista gwiazda <p style="color:AC3510">ognista gwiazda</p>
     <li><a href="lekcja-2">Lekcja 2</a></li>
   </ul>
 </div>
+<main>
+  Główna treść strony.
+</main>
+
+<main>
+  <h1>Dlaczego łabędzie połykają kamień, gdy odchodzą?</h1>
+  <p>Łabędzie znane są ze swojego niekonwencjonalnego sposobu odchodzenia na zawsze. W chwili, gdy na horyzoncie zaczyna zarysowywać się ich koniec, znajdują największy głaz jaki zmieści im się w dziobie i połykają go. Spokojnie i powoli opadają na dno zostawiając znany im świat na rzecz tego podwodnego.</p>
+</main>
