--- a/index.html
+++ b/index.html
@@ -52,3 +52,16 @@ wojonicy ognista gwiazda <p style="color:AC3510">ognista gwiazda</p>
   <h1>Dlaczego łabędzie połykają kamień, gdy odchodzą?</h1>
   <p>Łabędzie znane są ze swojego niekonwencjonalnego sposobu odchodzenia na zawsze. W chwili, gdy na horyzoncie zaczyna zarysowywać się ich koniec, znajdują największy głaz jaki zmieści im się w dziobie i połykają go. Spokojnie i powoli opadają na dno zostawiając znany im świat na rzecz tego podwodnego.</p>
 </main>
+<header>
+  Logo
+  Główna nawigacja strony
+</header>
+
+<header>
+  <a href=""><img src="logo.png"></a>
+  <ul>
+    <li><a href="">Link 1</a></li>
+    <li><a href="">Link 2</a></li>
+    <li><a href="">Link 3</a></li>
+  </ul>
+</header>
