--- a/index.html
+++ b/index.html
@@ -65,3 +65,14 @@ wojonicy ognista gwiazda <p style="color:AC3510">ognista gwiazda</p>
     <li><a href="">Link 3</a></li>
   </ul>
 </header>
+<nav>
+  Główna nawigacja strony
+</nav>
+
+<nav>
+  <ul>
+    <li><a href="">Link 1</a></li>
+    <li><a href="">Link 2</a></li>
+    <li><a href="">Link 3</a></li>
+  </ul>
+</nav> 
