--- a/index.html
+++ b/index.html
@@ -76,3 +76,25 @@ wojonicy ognista gwiazda <p style="color:AC3510">ognista gwiazda</p>
     <li><a href="">Link 3</a></li>
   </ul>
 </nav> 
+<header>
+  <a href=""><img src="logo.png"></a>
+  <nav>
+    <ul>
+      <li><a href="">Link 1</a></li>
+      <li><a href="">Link 2</a></li>
+      <li><a href="">Link 3</a></li>
+    </ul>
+  </nav>
+</header>
+
+    Sekcje HTML5
+    Layout Strony
+    DIV Sekcje Strony
+    Main
+    Header
+    Nav
+    Aside
+    Footer
+    Article
+    Section
+    Wsparcie HTML5
