--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
 Co to jest dysk w komputerze
+Mówiąc najprościej, dysk twardy przechowuje dane komputera. Obejmuje to wszystkie Twoje zdjęcia, filmy, muzykę, dokumenty i aplikacje oraz inne elementy, takie jak kod Twojego systemu operacyjnego, struktury i sterowniki. Pojemność dysku twardego określana jest w megabajtach (MB), gigabajtach (GB) i terabajtach (TB).
