--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 Co to jest dysk w komputerze
 Mówiąc najprościej, dysk twardy przechowuje dane komputera. Obejmuje to wszystkie Twoje zdjęcia, filmy, muzykę, dokumenty i aplikacje oraz inne elementy, 
 takie jak kod Twojego systemu operacyjnego, struktury i sterowniki. Pojemność dysku twardego określana jest w megabajtach (MB), gigabajtach (GB) i terabajtach (TB).
+Dyski HDD – dysk magnetyczny talerzowy-Dysk HDD to klasyczny dysk magnetyczny, znany powszechnie jako talerzowy. Jego cena jest dość niska nawet przy dużej pojemności. 
+Urządzenie ma niższą prędkość odczytu i zapisu danych w porównaniu do dysków SSD.
