--- a/index.html
+++ b/index.html
@@ -5,3 +5,41 @@ takie jak kod Twojego systemu operacyjnego, struktury i sterowniki. Pojemność 
 
 Dyski HDD – dysk magnetyczny talerzowy-Dysk HDD to klasyczny dysk magnetyczny, znany powszechnie jako talerzowy. Jego cena jest dość niska nawet przy dużej pojemności. 
 Urządzenie ma niższą prędkość odczytu i zapisu danych w porównaniu do dysków SSD.
+
+Dyski SSD-Dysk twardy to tradycyjne urządzenie pamięci masowej, które zawiera mechaniczne talerze i ruchomą głowicę odczytu/zapisu, która uzyskuje dostęp do danych. 
+Dysk SSD to nowsze, szybsze urządzenie, które przechowuje dane w bezpośrednio dostępnych chipach pamięci.
+
+Dyski SSHD – dysk hybrydowy talerzowy z dodatkową pamięcią SSD-Dyski SSHD (hybrydowe)
+Dysk SSHD, czyli hybrydowy, to nośnik talerzowy doposażony w nieduży moduł pamięci flash rodem z dysku SSD. 
+Z zewnątrz dyski hybrydowe nie różnią się od pozostałych nośników 2,5-calowych.
+
+<table>
+  <thead>
+    <tr>
+      <th scope="col">pamięć</th>
+      <th scope="col">ile kosztuje</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">2013</th>
+      <td>Dysk HDD</td>
+      <td>Dysk SSD</td>
+      <td>Dysk SSHD</td>
+    </tr>
+    <tr>
+      <th scope="row">2014</th>
+      <td>329zł</td>
+      <td></td>
+      <td></td>
+    </tr>
+  </tbody>
+  <tfoot>
+    <tr>
+      <th scope="row">Razem</th>
+      <td>700'000</td>
+      <td>450'000</td>
+      <td>250'000</td>
+    </tr>
+  </tfoot>
+</table>
