--- a/index.html
+++ b/index.html
@@ -22,23 +22,21 @@ Z zewnątrz dyski hybrydowe nie różnią się od pozostałych nośników 2,5-ca
   </thead>
   <tbody>
     <tr>
-      <th scope="row">2013</th>
-      <td>Dysk HDD</td>
-      <td>Dysk SSD</td>
-      <td>Dysk SSHD</td>
+      <th scope="row">Dysk HDD</th>
+      <td>329zł</td>
+      <td>750 GB</td>
     </tr>
     <tr>
-      <th scope="row">2014</th>
-      <td>329zł</td>
+      <th scope="row">Dysk SSD</th>
       <td>289zł</td>
+      <td>512 GB</td>
       <td>425,54zł</td>
     </tr>
   </tbody>
   <tfoot>
     <tr>
-      <th scope="row">Razem</th>
-      <td>750 GB</td>
-      <td>512 GB</td>
+      <th scope="row">Dysk SSHD</th>
+      <td>425,54zł</td>
       <td>8 GB</td>
     </tr>
   </tfoot>
