--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ Z zewnątrz dyski hybrydowe nie różnią się od pozostałych nośników 2,5-ca
 <table>
   <thead>
     <tr>
+      <th scope="row"></th>
       <th scope="col">pamięć</th>
       <th scope="col">ile kosztuje</th>
     </tr>
